fixed spacing on project list

--- a/scss/test-style.scss
+++ b/scss/test-style.scss
@@ -84,10 +84,10 @@ ul {
   list-style:none;
 }
 #projects li {
-  display:flex;
+  text-align:center;
 }
 #projects li a {
-  display:inline-flex;
+
 }
 .circle {
   border-radius:50%;
@@ -97,10 +97,7 @@ ul {
 }
 span.title{
   position: relative;
-  top: 17.75em;
-  left: -12.25em;
-  margin: .35em;
-
+  top: 1.75em;
 }
 
 footer{
@@ -120,18 +117,23 @@ textarea {
 
 //tooltips
 
-#home .fa:hover {
- 
+
+.fa:hover {
+  color: $tertiary-color;
 }
-#home .fa:hover:after {
-    color: $tertiary-color;
-  content: 'Learn More';
-  position:relative;
-  top:1.4em;
-  left: -6em;
-  font-family: $primary-font;
+.fa:hover:after {
+    position:relative;
+  color: $tertiary-color;
+    font-family: $primary-font;
   font-style: italic;
   font-weight: 300;
   font-size: 80%;
+}
+#home .fa:hover:after {
+  content: 'Learn More';
+  position:relative;
+  color: $tertiary-color;
+    top:1.4em;
+    right: 6em;
 
 }
